# spurv_legacy

./: CMakeLists.txt  Makefile  README.md  how_does_it_work.md  implicit_ids.cpp  implicit_ids.hpp  implicit_types.cpp  implicit_types.hpp  lex_file_generator.py  spurv.cpp  spurv.h  spurv_compiler.h  uniforms.cpp  uniforms.hpp  yacc_file_generator.py
include/: spurv.hpp
spirv_spec/: enum_list.txt  enum_value_list.txt  instruction_codes.txt  new_instructions.txt  original_instructions.txt  result_index_list.txt
src/: functions.cpp  implicit_ids.cpp  implicit_ids.hpp  lex.yy.cpp  lex_stub.l  spurv.cpp  spurv.l  spurv.y  spurv_compiler.h  spurv_compiler.hpp  uniforms.cpp  y.tab.cpp  y.tab.hpp  yacc_stub.y
test/: Makefile  canonical_frag.spurv  canonical_vert.spurv  example.spurv  example_frag.spurv  example_vert.spurv  simple_test.cpp  test.cpp  test_frag.spurv  vertex_uniform.spurv
